--- a/Noted/Noted/Noted.csproj
+++ b/Noted/Noted/Noted.csproj
@@ -129,6 +129,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Managers\JwtManager.cs" />
+    <Compile Include="Managers\PasswordManager.cs" />
     <Compile Include="Models\CategoriesModels.cs" />
     <Compile Include="Models\NotesModels.cs" />
     <Compile Include="Models\TabsModels.cs" />
@@ -137,6 +138,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
